learning changes
